add jumbotron because everybody loves a lil' jumbotron

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   </head>
   <!-- 3. Display the application -->
   <body>
-    <div class="page-header">
+    <div class="jumbotron">
     <h1>Meal Tracker App</h1>
   </div>
     <my-app>Loading...</my-app>
